Add another pipeline JVM option